Chnage menu text and add logo

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -153,11 +153,17 @@ section.home-section-10 {
 .tislaamo {
   margin-top: 240px;
   padding-bottom: 40px;
-  width: 600px;
+  width: 550px;
   z-index: 999;
 }
 
 .img_bottom_last {
   margin-bottom: 200px !important;
   width: 600px;
+}
+
+.language_select {
+  margin-top: 23px;
+  background-color: #000;
+  border: none;
 }
