--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
           <div class="logo-box">
             <div class="name-box" style=" display:block;">
               <a href="http://www.valamodistillery.com/">
-                <h1 class="site-name"></h1></a>
+                <%= image_tag 'axis_mundi_logo.png', style: "width: 115px;margin-top: 5px;" %></a>
               <span class="site-tagline"></span>
             </div>
 
@@ -21,15 +21,21 @@
           <nav class="site-nav" role="navigation">
             <ul id="menu-main" class="main-nav">
               <li class="onetone-menuitem"><a id="onetone-section-1" href="#section-1">
-                <span>Distillery</span></a></li>
+                <span>Axix Mundi produces</span></a></li>
               <li class="onetone-menuitem"><a id="onetone-section-3" href="#section-3">
-                <span>Story</span></a></li>
+                <span>Programs & Apps</span></a></li>
               <li class="onetone-menuitem"><a id="onetone-section-5" href="#section-5">
-                <span>Barrels</span></a></li>
+                <span>Special Orders</span></a></li>
               <li class="onetone-menuitem"><a id="onetone-testimonials" href="#testimonials">
-                <span>Production</span></a></li>
+                <span>Cryptocurrency Payments </span></a></li>
               <li class="onetone-menuitem"><a id="onetone-section-9" href="#section-9">
-                <span>Contact</span></a></li>
+                <span>The New Internet/Blockchain</span></a></li>
+              <li>
+                <select name="language" id="language" class="language_select">
+                  <option value="1">English</option>
+                  <option value="0">Finnish</option>
+                </select>
+              </li>
             </ul>
           </nav>
         </div>
@@ -41,7 +47,7 @@
           <div class="logo-box">
             <div class="name-box" style=" display:block;">
               <a href="http://www.valamodistillery.com/">
-                <h1 class="site-name"></h1></a>
+                <%= image_tag 'axis_mundi_logo.png', style: "width: 115px;margin-top: 5px;" %></a>
               <span class="site-tagline"></span>
             </div>
 
@@ -53,15 +59,21 @@
           <nav class="site-nav" role="navigation">
             <ul id="menu-main" class="main-nav">
               <li class="onetone-menuitem"><a id="onetone-section-1" href="#section-1">
-                <span>Distillery</span></a></li>
+                <span>Axix Mundi produces</span></a></li>
               <li class="onetone-menuitem"><a id="onetone-section-3" href="#section-3">
-                <span>Story</span></a></li>
+                <span>Programs & Apps</span></a></li>
               <li class="onetone-menuitem"><a id="onetone-section-5" href="#section-5">
-                <span>Barrels</span></a></li>
+                <span>Special Orders</span></a></li>
               <li class="onetone-menuitem"><a id="onetone-testimonials" href="#testimonials">
-                <span>Production</span></a></li>
+                <span>Cryptocurrency Payments</span></a></li>
               <li class="onetone-menuitem"><a id="onetone-section-9" href="#section-9">
-                <span>Contact</span></a></li>
+                <span>The New Internet/Blockchain</span></a></li>
+              <li>
+                <select name="language" id="language" class="language_select">
+                  <option value="1">English</option>
+                  <option value="0">Finnish</option>
+                </select>
+              </li>
             </ul>
           </nav>
         </div>
@@ -82,7 +94,7 @@
                   <div class="home-container container page_container">
                     <div class="home-section-content">
                       <div class="full_width text-center">
-                        <%= image_tag 'logo_white_black.png', class: 'tislaamo' %>
+                        <%= image_tag 'axis_mundi_logo.png', class: 'tislaamo' %>
                         <%= image_tag 'text_bottle_white-lg.png' %>
 
                       </div>
@@ -324,7 +336,7 @@
                   <div class="home-section-content">
                     <div class="full_width text-center">
 
-                      <%= image_tag 'logo_white_black.png', class: 'tislaamo' %>
+                      <%= image_tag 'axis_mundi_logo.png', class: 'tislaamo' %>
                       <%= image_tag 'text_bottle_white-lg.png', class: 'img_bottom_last' %>
                       <!--<img class="tislaamo" src="http://www.valamodistillery.com/wp-content/uploads/2017/06/Valamo-Distillery-logo-white-black-600.png" alt=""/>-->
                       <!--<img class="img_bottom_last" src="http://www.valamodistillery.com/wp-content/uploads/2017/06/Heavenly-spirit-from-valamo-600.png" alt=""/>-->
